# GIHMS

./: .gitignore  README.md
franka_ros/franka_description/robots/common/: panda_gazebo.xacro
franka_ros/franka_description/robots/panda/: panda.urdf.xacro
franka_ros/franka_gazebo/launch/: dual_panda.launch  panda.launch  robot.launch
gihms_pkg/: CMakeLists.txt  package.xml
gihms_pkg/include/: cameras_view.h  cameras_view.ui  main_window.h  main_window.ui  setup_dialog.h  setup_dialog.ui
gihms_pkg/launch/: gihms_node.launch
gihms_pkg/nodes/: gihms_node.cpp
gihms_pkg/rc/: resources.qrc
gihms_pkg/rc/dataset_sphere_tilt/plans/: 0000.yaml  0001.yaml  0002.yaml  0003.yaml  0004.yaml  0005.yaml  0006.yaml  0007.yaml  0008.yaml
gihms_pkg/rc/dataset_sphere_tilt/start_pos/: 0000.yaml  0001.yaml  0002.yaml  0003.yaml  0004.yaml  0005.yaml  0006.yaml  0007.yaml  0008.yaml
gihms_pkg/rc/trajectories/: start_pose.yaml
gihms_pkg/src/: cameras_view.cpp  main_window.cpp  setup_dialog.cpp
